fix jumpy table rows when toggling info areas
Reviewed-on: http://review.couchbase.org/12675
Tested-by: Benjamin Young <benjamin@couchbase.com>

--- a/priv/public/css/screen.css
+++ b/priv/public/css/screen.css
@@ -777,11 +777,13 @@ ul.tabs .badge_display .badge {display:block;}
 .list tr:first-child th {padding: 10px 5px 10px 8px}
 .list tr:first-child th:first-child {/*padding:0 0 0 56px;*padding-right:25px;display:block;*/text-align:left;white-space:nowrap;}
 .list tr:first-child th i {font-style:normal;position:relative;}
-.list tr:first-child th.bucket_name, .list tr:first-child th.bucket_name {padding:10px;text-align:left}
+#buckets .list tr:first-child th.bucket_name, .list tr:first-child th.bucket_name {padding:10px;text-align:left}
 .list tr:first-child th.last {border-right:1px solid #d9dce0;}
 .list td.design_doc_name {font-weight:bolder; color: #808080; text-align:left;font-size:100%;}
 .list td.bucket_name, .list td.view_name, .list td.node_name {font-weight:bolder;text-align:left;font-size:130%}
-.list td.node_name {font-size:120%;white-space:nowrap}
+.list td.bucket_name, .list td.node_name{position:relative;padding-left:35px}
+.list td.bucket_name a:first-child, .list td.node_name a:first-child {position:absolute;left:10px}
+.list td.node_name {font-size:120%;white-space:nowrap;}
 .list td.ram {width:77px}
 .list td.rep {width:38px;white-space:nowrap}
 .list td.view_name{padding-left:3em;color:#616062}
